<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item11"
            android:checked="true"
            android:icon="@android:drawable/star_on"
            android:title="@string/txtMenu11" />
        <item
            android:id="@+id/item12"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/txtMenu12" />
        <item
            android:id="@+id/item13"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/txtMenu13" />
        <item
            android:id="@+id/item14"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/txtMenu14" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subgroup"
            android:title="@string/txtSubgrupo">
            <menu>
                <item
                    android:id="@+id/item21"
                    android:icon="@android:drawable/ic_menu_mapmode"
                    android:title="@string/txtMenu21" />
                <item
                    android:id="@+id/item22"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/txtMenu22" />
            </menu>
        </item>
    </group>
</menu>